# flux-runtime-zho

./: .gitignore  CHARTER.md  DOCKSIDE-EXAM.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: design.md
examples/: Haiyang.flux
for-fleet/: health-check-2026-04-12_171954.json
src/flux_zho/: __init__.py  bridge_adapter.py  classifier_type.py  cli.py  encoder.py  fir.py  interpreter.py  quantum_registers.py  topic_anaphora.py
src/flux_zho/vocabulary/: __init__.py  a2a.ese  classifiers.toml  maritime.ese  math.ese
tests/: test_fir.py  test_interpreter_zho.py
