[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flux-runtime-zho"
version = "0.1.0"
description = "流星运行时 — 流体语言通用执行。主题优先的中文自然语言编程运行时，量词类型系统，零形回指上下文传递。"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["nlp", "chinese", "flux", "runtime", "zhongwen", "topic-comment", "classifier", "liuxing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Natural Language :: Chinese (Simplified)",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
flux-zho = "flux_zho.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
